outputs/20260907_ops02_network_tls_1.0.0/evidence/ops02-linux-firewall/iptables-before.rules
# Generated by iptables-save v1.8.7 on Mon Sep  7 11:55:36 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
:TASK-OPS02-DOCKER - [0:0]
:TASK-OPS02-IN - [0:0]
-A INPUT -i eth0 -j TASK-OPS02-IN
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-USER -i eth0 -j TASK-OPS02-DOCKER
-A TASK-OPS02-DOCKER -m conntrack --ctstate RELATED,ESTABLISHED -j RETURN
-A TASK-OPS02-DOCKER -s 192.0.2.0/28 -i eth0 -p tcp -m conntrack --ctorigdst 192.0.2.10 --ctorigdstport 443 -j RETURN
-A TASK-OPS02-DOCKER -s 198.51.100.0/28 -i eth0 -p tcp -m conntrack --ctorigdst 192.0.2.10 --ctorigdstport 443 -j RETURN
-A TASK-OPS02-DOCKER -d 172.30.10.0/24 -i eth0 -j DROP
-A TASK-OPS02-DOCKER -d 172.30.20.0/24 -i eth0 -j DROP
-A TASK-OPS02-DOCKER -d 172.30.30.0/24 -i eth0 -j DROP
-A TASK-OPS02-DOCKER -i eth0 -p tcp -m conntrack --ctorigdst 192.0.2.10 --ctorigdstport 5432 -j DROP
-A TASK-OPS02-DOCKER -i eth0 -p tcp -m conntrack --ctorigdst 192.0.2.10 --ctorigdstport 8080 -j DROP
-A TASK-OPS02-DOCKER -i eth0 -p tcp -m conntrack --ctorigdst 192.0.2.10 --ctorigdstport 443 -j DROP
-A TASK-OPS02-DOCKER -j RETURN
-A TASK-OPS02-IN -m conntrack --ctstate RELATED,ESTABLISHED -j RETURN
-A TASK-OPS02-IN -s 198.51.100.0/28 -i eth0 -p tcp -m tcp --dport 22 -j RETURN
-A TASK-OPS02-IN -i eth0 -j DROP
-A TASK-OPS02-IN -j RETURN
COMMIT
# Completed on Mon Sep  7 11:55:36 2026
# Generated by iptables-save v1.8.7 on Mon Sep  7 11:55:36 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [7:413]
:POSTROUTING ACCEPT [7:413]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.18.0.0/16 ! -o docker0 -j MASQUERADE
COMMIT
# Completed on Mon Sep  7 11:55:36 2026
